--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@types/node": "^22.0.0",
     "eslint": "^9.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.7.0",
+    "typescript-eslint": "^8.53.1",
     "vitest": "^3.0.0"
   },
   "engines": {
