--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,10 +16,12 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
-          registry-url: 'https://registry.npmjs.org'
 
       - name: Update npm (Trusted Publishing requires npm 11.5.1+)
         run: npm install -g npm@latest
+
+      - name: Configure npm for public registry
+        run: npm config set registry https://registry.npmjs.org/
 
       - name: Install dependencies
         run: npm ci
