--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,12 +16,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
-
-      - name: Update npm (Trusted Publishing requires npm 11.5.1+)
-        run: npm install -g npm@latest
-
-      - name: Configure npm for public registry
-        run: npm config set registry https://registry.npmjs.org/
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: npm ci
@@ -29,5 +24,7 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Publish to NPM (Trusted Publishing - no token needed)
+      - name: Publish to NPM
         run: npm publish --provenance --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
