--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,8 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Test
+        run: npm run test -- --run
+
       - name: Lint
         run: npm run lint
