--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,12 +17,21 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
+          registry-url: 'https://registry.npmjs.org'
 
       - name: Install dependencies
         run: npm ci
 
       - name: Build
         run: npm run build
+
+      - name: Debug auth config
+        run: |
+          echo "NPM config:"
+          npm config list
+          echo "NPMRC content:"
+          cat ~/.npmrc || echo "No .npmrc"
+          echo "ACTIONS_ID_TOKEN_REQUEST_URL: $ACTIONS_ID_TOKEN_REQUEST_URL"
 
       - name: Publish to NPM with provenance
         run: npm publish --provenance --access public
