--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,13 +25,8 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Debug auth config
-        run: |
-          echo "NPM config:"
-          npm config list
-          echo "NPMRC content:"
-          cat ~/.npmrc || echo "No .npmrc"
-          echo "ACTIONS_ID_TOKEN_REQUEST_URL: $ACTIONS_ID_TOKEN_REQUEST_URL"
-
       - name: Publish to NPM with provenance
-        run: npm publish --provenance --access public
+        run: |
+          rm -f "$NPM_CONFIG_USERCONFIG"
+          unset NODE_AUTH_TOKEN
+          npm publish --provenance --access public
