--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.ref }}
 
       - uses: actions/setup-node@v4
         with:
@@ -32,11 +33,20 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+      - name: Pull latest changes
+        run: git pull --rebase origin ${{ github.ref_name }}
+
       - name: Bump version
         run: npm version ${{ inputs.version }} -m "Release v%s"
 
-      - name: Push changes
-        run: git push --follow-tags
+      - name: Push changes with retry
+        run: |
+          for i in 1 2 3; do
+            git push --follow-tags && break
+            echo "Push failed, retrying after pull..."
+            git pull --rebase origin ${{ github.ref_name }}
+            sleep 2
+          done
 
       - name: Create GitHub Release
         env:
