fix: resolve CJS compatibility issue with path resolution
The original code used import.meta.url which is undefined in CJS context
when bundled by tsup. This caused the library to crash when imported via
require() in CommonJS environments.

Changes:
- Implement robust path resolution strategy supporting both ESM and CJS
- Add ./package.json export to enable require.resolve() in CJS fallback
- ESM uses import.meta.url (standard approach)
- CJS uses require.resolve() to locate the installed package

Verified working:
- npx ux-toolkit install --global/--project
- require('ux-toolkit') (CJS)
- import('ux-toolkit') (ESM)
- All path utilities resolve correctly in both contexts

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
+    "./package.json": "./package.json",
     "./skills/*": "./skills/*",
     "./agents/*": "./agents/*",
     "./commands/*": "./commands/*"
