feat: add multi-platform support, status/doctor commands, and selective install
- Add Claude Code support alongside OpenCode (--claude, --opencode flags)
- Add .claude-plugin/plugin.json manifest for Claude marketplace
- Add status command to show installed vs available components
- Add doctor command for installation diagnostics
- Add --all flag to install to all detected platforms
- Add --skill, --agent, --command flags for selective component install
- Add auto-detection with interactive prompt when both platforms detected
- Add XDG_CONFIG_HOME support for Linux
- Add environment variable overrides (UX_TOOLKIT_CONFIG_DIR, CLAUDE_CONFIG_DIR)
- Bump version to 0.5.0
- Add 67 tests (was 52)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ux-toolkit",
-  "version": "0.4.1",
-  "description": "AI-powered UI/UX review toolkit with skills, agents, and commands for OpenCode and other AI coding assistants",
+  "version": "0.5.0",
+  "description": "AI-powered UI/UX review toolkit with skills, agents, and commands for OpenCode, Claude Code, and other AI coding assistants",
   "keywords": [
     "ux",
     "ui",
@@ -11,6 +11,7 @@
     "heuristics",
     "design-system",
     "opencode",
+    "claude-code",
     "ai-agents",
     "mcp"
   ],
@@ -46,6 +47,7 @@
     "skills",
     "agents",
     "commands",
+    ".claude-plugin",
     "README.md"
   ],
   "scripts": {
