--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,17 +1,11 @@
-name: Create Release
+name: Release
 
 on:
+  push:
+    branches: [main]
+    paths:
+      - 'package.json'
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version bump type (patch, minor, major)'
-        required: true
-        default: 'patch'
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
 
 jobs:
   release:
@@ -22,37 +16,36 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.ref }}
 
       - uses: actions/setup-node@v4
         with:
           node-version: '22'
 
-      - name: Configure Git
+      - name: Get package version
+        id: pkg
+        run: echo "version=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+
+      - name: Check if tag exists
+        id: check
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          if git rev-parse "v${{ steps.pkg.outputs.version }}" >/dev/null 2>&1; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
 
-      - name: Pull latest changes
-        run: git pull --rebase origin ${{ github.ref_name }}
-
-      - name: Bump version
-        run: npm version ${{ inputs.version }} -m "Release v%s"
-
-      - name: Push changes with retry
-        run: |
-          for i in 1 2 3; do
-            git push --follow-tags && break
-            echo "Push failed, retrying after pull..."
-            git pull --rebase origin ${{ github.ref_name }}
-            sleep 2
-          done
-
-      - name: Create GitHub Release
+      - name: Create Release
+        if: steps.check.outputs.exists == 'false'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          VERSION=$(node -p "require('./package.json').version")
+          VERSION="${{ steps.pkg.outputs.version }}"
+          git tag -a "v$VERSION" -m "Release v$VERSION"
+          git push origin "v$VERSION"
           gh release create "v$VERSION" \
             --title "v$VERSION" \
             --generate-notes
+
+      - name: Skip release
+        if: steps.check.outputs.exists == 'true'
+        run: echo "Tag v${{ steps.pkg.outputs.version }} already exists, skipping release"
