--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      id-token: write
     steps:
       - uses: actions/checkout@v4
 
@@ -29,10 +28,7 @@ jobs:
       - name: Build
         run: bun run build
 
-      - name: Clear token config for OIDC
-        run: npm config delete //registry.npmjs.org/:_authToken
-
       - name: Publish to NPM
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ''
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
