--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Build
         run: bun run build
 
-      - name: Publish to NPM with provenance
-        run: npm publish --provenance --access public
+      - name: Publish to NPM
+        run: npm publish
